# hyperdspy

./: .gitignore  README.md  main.py  pyproject.toml
docs/: architecture.md  configuration.md  recording.md  strategies.md  use-case-market-making.md
examples/: scratch.ipynb
hyperdspy/: __init__.py  config.py  engine.py  gateway.py  l4_client.py  models.py  order_manager.py  orderbook.py  paper.py  recorder.py  strategy.py
hyperdspy/strategies/: simple_mm.py
tests/: conftest.py  test_l4.py  test_models.py  test_order_manager.py  test_orderbook.py  test_paper.py  test_recorder.py
